test/sema/mutable-return-type.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

// CHECK: [[@LINE+1]]:5: error: return types cannot be 'mutable'
def foo(): mutable int { return 42; }
